text visibility fix

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
   font-weight: 900;
   width: 80vw;
   margin: auto;
+  font-size: large;
 }
 
 #check-btn{
